--- a/package.json
+++ b/package.json
@@ -16,11 +16,13 @@
   },
   "dependencies": {
     "@types/fs-extra": "^5.0.3",
+    "@types/lodash": "^4.14.109",
     "@types/minimist": "^1.2.0",
     "@types/node": "^10.3.3",
     "@types/request-promise-native": "^1.0.15",
     "@types/winston": "^2.3.9",
     "fs-extra": "^6.0.1",
+    "lodash": "^4.17.10",
     "minimist": "^1.2.0",
     "request": "^2.87.0",
     "request-promise-native": "^1.0.5",
